[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/textures/background.png" type="Texture" id=1]
[ext_resource path="res://Mundo/mundo.gd" type="Script" id=2]
[ext_resource path="res://Puntuacion/Puntuacion.tscn" type="PackedScene" id=3]
[ext_resource path="res://AreaDeInformacion/areaDeInformacion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Obstaculo/Generador/GeneradorDeObstaculos.tscn" type="PackedScene" id=5]
[ext_resource path="res://Mundo/Suelo.tscn" type="PackedScene" id=6]
[ext_resource path="res://Jugador/Jugador.tscn" type="PackedScene" id=7]

[node name="mundo" type="Node2D"]
script = ExtResource( 2 )

[node name="Puntuacion" parent="." instance=ExtResource( 3 )]

[node name="fondo" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="GeneradorDeObstaculos" parent="." instance=ExtResource( 5 )]
position = Vector2( 600, 0 )

[node name="Suelo" parent="." instance=ExtResource( 6 )]
position = Vector2( 0.313667, 685.908 )

[node name="Jugador" parent="." instance=ExtResource( 7 )]
position = Vector2( 115, 427 )
gravity_scale = 0.0

[node name="areaDeInformacion" parent="." instance=ExtResource( 4 )]
[connection signal="body_entered" from="Suelo/Area2D" to="." method="_on_Suelo_body_entered"]
[connection signal="morir" from="Jugador" to="." method="_on_Jugador_morir"]
[connection signal="empezar" from="areaDeInformacion" to="." method="_on_CanvasLayer_empezar"]

[editable path="Suelo"]
